HEAD
    + Made VMs from host with raw base images permanent
    + Skip some actions in the deploy for hosts with raw base images
    + Added support for image removal using the image name
    + Added 'baseImage-type' attribute to hosts
    + Now test suites refer directly to test scripts instead of dirs
    + Added getimg command line option to trigger the download of an image
    + Renamed command line option from create to createimg
    + Added image-repo conf key to set the place where to download images from
    + Change auto-create-images conf key for image-missing-action, that allows
      auto-create and auto-download as values
    + Use TryCatch instead of Error
    + Now copied directories in files section maintain structure as they are
      transferred as tar files and unpacked on the destination VM
    + Add option to the post-tests so they are executed always
    + Add skip option to the step by step execution
    + Stop before each test on step by step execution
    + Ignore critical attribute if running with -wait-fail
    + Run web tests with English locale to make them language independendant
    + Depend on qemu-kvm instead of kvm
    + Adding host name to the test output in the cli
    + Added support for proxy and security-mirror in vmbuilder
    + Allow to specify if the host of a web test is an external_host
    + Show output when setup scripts fail
    + Use qcow2 images instead of raw to support snapshots
    + Added anste-snapshot tool
    + Allow to define relative_url of a web test
    + Set options from [global] conf as commandline variables if not specified
    + Fixed check of running machines when system language is not English
    + Clean network from previous scenario when deploying a new one
    + clean option removed from the anste executable, use anste-clean instead
    + nat-iface and nameserver are now automatically detected
    + Environment variables named ANSTE_* are passed to setup scripts