@@ -1,4 +1,5 @@
 HEAD
+    + Show test log on failures when verbose mode is enabled
     + Made VMs from host with raw base images permanent
     + Skip some actions in the deploy for hosts with raw base images
     + Added support for image removal using the image name
